crates/ssa-workflow-derive/tests/ui/duplicate_version.stderr
error: duplicate cache_schema version
 --> tests/ui/duplicate_version.rs:4:29
  |
4 | #[cache_schema(version = 1, version = 2)]
  |                             ^^^^^^^
